[Add] 首頁樣式佈局

--- a/src/assets/style.styl
+++ b/src/assets/style.styl
@@ -16,8 +16,13 @@ size(w=100%,h=w)
 random(min,max)
 	return floor(math(0, 'random')*(max - min + 1) + min)
 
+outlineSpace = 1.4rem
 
 *
   box-sizing border-box
 	margin 0
 	padding 0  
+	font-family '微軟正黑體'
+
+body
+	font-size 16px
