[Edit] page-2位置與動畫修改

--- a/src/assets/style.styl
+++ b/src/assets/style.styl
@@ -24,5 +24,10 @@ outlineSpace = 1.4rem
 	padding 0  
 	font-family '微軟正黑體'
 
+html,body
+	size()
+	-webkit-overflow-scrolling touch
+	overflow-scrolling touch
+
 body
 	font-size 16px
