[Add] 增加自介與簡歷

--- a/src/assets/style.styl
+++ b/src/assets/style.styl
@@ -16,6 +16,13 @@ size(w=100%,h=w)
 random(min,max)
 	return floor(math(0, 'random')*(max - min + 1) + min)
 
+
+fontStyle(fz=1.6rem)
+	font-size fz
+	line-height (fz * 2)
+	text-indent (fz * 2)
+	letter-spacing 4px
+
 outlineSpace = 1.4rem
 
 *
