[Edit] 調整顏色及動畫

--- a/src/assets/style.styl
+++ b/src/assets/style.styl
@@ -25,6 +25,9 @@ fontStyle(fz=1.6rem)
 
 outlineSpace = 1.4rem
 
+colorPrimary = #000
+colorSecondary = #fff
+
 *
   box-sizing border-box
 	margin 0
